--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/econ.ico">
+  <meta name="description" content="Brenda Baltazar - Resume">
+  <meta name="author" content="862377992">
 
-  <title>John Doe - Business Administration</title>
+  <title>Brenda Baltazar - Business Economics</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Brenda Baltazar</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/brendabaltazar.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Brenda Baltazar
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Economics</div>
+        <p class="lead mb-4">My name is Brenda Baltazar Basilio Isabel, and I was born in Baja Tijuana, Mexico. Since the age of two, I have been raised in Los Angeles, California. My dream job is to become a business consultant, and I firmly believe that my analytical abilities and presentation skills will be invaluable for this career path. Currently, I am a full-time student at the University of California, Riverside, in my second year of full-time studies. In addition to my academic pursuits, I have recently embarked on my first year as a marketing assistant for the University's Education Abroad department. My journey as a marketing assistant has opened new doors for me, allowing me to explore my passion for promotion and event planning. In this role, I am responsible for promoting various events organized by the Education Abroad department. A typical day in the office involves extensive research, brainstorming ideas for social media campaigns, and preparing materials for upcoming events. This work demands long hours of sitting, frequent use of technology, and a considerable degree of creativity. <br><br>
 
-        Enter bio here<br><br>
+        Balancing the demands of both my academic and professional life has been a crucial aspect of my personal and career development. Preventing burnout is essential, and I have learned to manage my time efficiently to ensure that my studies and work responsibilities coexist harmoniously. I have found incredible support from LaSharon McLean Perez, the Assistant Director of International Affairs, who is highly accommodating and understanding of our schedules. Her guidance and mentorship have been invaluable, and I am eager to continue working in this role to further enhance my experiences and skills. As I pursue my academic and career goals, I am on the lookout for opportunities that will allow me to gain experiences that will shape my future as a business consultant. The role of a marketing assistant has provided me with a platform to grow, learn, and develop professionally. I aim to continue in this position for as long as possible, as it offers a dynamic environment for gaining hands-on experience and honing my skills in marketing and event promotion. Furthermore, I am enthusiastic about engaging with a community of like-minded individuals who share my aspirations and values. The sense of belonging and camaraderie that comes from interacting with others who have faced similar challenges is inspiring. I am committed to contributing my unique experiences and learning from the diverse perspectives of my peers. Together, we can create a supportive environment and foster lasting relationships that extend beyond the boundaries of our campus. 
 
-        Enter bio here
+<br><br>
+
+        My journey as an undocumented student has had its share of hurdles and triumphs. It has taught me resilience, determination, and the power of community support. I am motivated to continue this journey, empowered by my experiences, and eager to contribute to a brighter and more inclusive future for all. In conclusion, my journey from Baja Tijuana to Los Angeles, my academic pursuits at the University of California, Riverside, and my role as a marketing assistant have collectively shaped my aspirations and commitment to becoming a business consultant. My experiences have instilled in me a strong work ethic, time management skills, and a passion for promotion and event planning. I am determined to continue my personal and professional growth while contributing to a supportive community of like-minded individuals. My story as an undocumented student is a source of strength, and I am eager to learn from others' experiences and build a brighter future together.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/feed/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/izzydoesizzy/resumetemplate">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +94,50 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Marketing Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://international.ucr.edu/abroad">UCR: International Affairs</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Make content like videos, intervews and social media posts<br>
+              • Create bookmarks, infographics and flyers<br> 
+              • Speakers for Education Abroad Programs<br>
+
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">September 2023 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Business@schools</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.bcg.com/">Boston Consulting Group</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • This afterschool program has helped me with my public speaking and given me the opportunity to meet real-life consultants from the Boston Consulting Group.<br>
+              • I have analyzed businesses both big and small, and designed and developed a business plan of my own.
+<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary"> 2019 -  2022</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Math, Engineering, Science, Achievements</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://viterbik12.usc.edu/uscmesa/">MESA - USC</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • My team and I design and build systems and structures to compete at a district and national level.<br>
+            • Prosteic Arm<br>
+            • Gliders<br>
+            • Learned to Code<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">2018 - 2022</span>
           </div>
         </div>
 
@@ -152,36 +156,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Business Economics</div>
+            <div>Undergraduate: Buisness Economics</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">Saptember 2022 - June 2026</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -191,7 +172,12 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image1.jpeg" width="500px">
+            <img src="img/image2.jpeg" width="500px"><br>
+            <img src="img/image3.jpeg" width="500px">
+            <img src="img/image4.jpeg" width="500px"><br>
+            <img src="img/image5.jpeg" width="500px">
+            <img src="img/image6.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
